feat: finalisation template pour front end

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,18 +4,12 @@
       <div class="row gx-0 align-items-center" style="height: 45px;">
           <div class="col-lg-6 text-center text-lg-start mb-lg-0">
               <div class="d-flex flex-wrap">
-                  <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Find A Location</a>
+                  <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>N'importe où à Madagascar</a>
                   <a href="tel:+01234567890" class="text-muted me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
-                  <a href="mailto:example@gmail.com" class="text-muted me-0"><i class="fas fa-envelope text-primary me-2"></i>Examplegmail.com</a>
+                  <a href="mailto:example@gmail.com" class="text-muted me-0"><i class="fas fa-envelope text-primary me-2"></i>madagarage&#64;car.mg</a>
               </div>
           </div>
           <div class="col-lg-6 text-center text-lg-end">
-              <div class="d-flex align-items-center justify-content-end">
-                  <a href="#" class="btn btn-light btn-sm-square rounded-circle me-3"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#" class="btn btn-light btn-sm-square rounded-circle me-3"><i class="fab fa-twitter"></i></a>
-                  <a href="#" class="btn btn-light btn-sm-square rounded-circle me-3"><i class="fab fa-instagram"></i></a>
-                  <a href="#" class="btn btn-light btn-sm-square rounded-circle me-0"><i class="fab fa-linkedin-in"></i></a>
-              </div>
           </div>
       </div>
   </div>
@@ -27,7 +21,7 @@
   <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
           <a href="" class="navbar-brand p-0">
-              <h1 class="display-6 text-primary"><i class="fas fa-car-alt me-3"></i>Cental</h1>
+              <h1 class="display-6 text-primary"><i class="fas fa-car-alt me-3"></i>MGC</h1>
               <!-- <img src="img/logo.png" alt="Logo"> -->
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -35,39 +29,13 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
               <div class="navbar-nav mx-auto py-0">
-                  <a href="index.html" class="nav-item nav-link">Home</a>
-                  <a href="about.html" class="nav-item nav-link active">About</a>
-                  <a href="service.html" class="nav-item nav-link">Service</a>
-                  <a href="blog.html" class="nav-item nav-link">Blog</a>
-                  
-                  <div class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                      <div class="dropdown-menu m-0">
-                          <a href="feature.html" class="dropdown-item">Our Feature</a>
-                          <a href="cars.html" class="dropdown-item">Our Cars</a>
-                          <a href="team.html" class="dropdown-item">Our Team</a>
-                          <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                          <a href="404.html" class="dropdown-item">404 Page</a>
-                      </div>
-                  </div>
-                  <a href="contact.html" class="nav-item nav-link">Contact</a>
+                  <a href="#acceuil" class="nav-item nav-link">Acceuil</a>
+                  <a href="#apropos" class="nav-item nav-link active">About</a>
+                  <a href="#service" class="nav-item nav-link">Service</a>
               </div>
-              <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Get Started</a>
+              <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Commencer à chercher une garage</a>
           </div>
       </nav>
   </div>
 </div>
 <!-- Navbar & Hero End -->
-
-<!-- Header Start -->
-<div class="container-fluid bg-breadcrumb">
-  <div class="container text-center py-5" style="max-width: 900px;">
-      <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">About Us</h4>
-      <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item"><a href="#">Pages</a></li>
-          <li class="breadcrumb-item active text-primary">About</li>
-      </ol>    
-  </div>
-</div>
-<!-- Header End -->
