--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -29,10 +29,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
               <div class="navbar-nav mx-auto py-0">
-                  <a href="#acceuil" class="nav-item nav-link">Acceuil</a>
+                  <a href="#acceuil" class="nav-item nav-link">Accueil</a>
                   <a href="#apropos" class="nav-item nav-link active">About</a>
                   <a href="#service" class="nav-item nav-link">Service</a>
               </div>
+              <a href="#" class="btn btn-secondary rounded-pill py-2 px-4">login</a>
               <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Commencer à chercher une garage</a>
           </div>
       </nav>
